css/style.css
/* global stuff */
.w-100{
	width: 100%;
}
.hidden{
	visibility: hidden;
}
.mar-top-20{
	padding-top: 20px;
}
.a-right{
	float: right;
}
.toggle {
  position: relative;
  display: inline-block;
  width: 42px;
  height: 24px;
}
.toggle input {
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}
[data-themes*=dark] .slider{
	background-color: #212121;
}
.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}
input:checked + .slider {
  background-color: #00b511;
}
input:focus + .slider {
  box-shadow: 0 0 1px #00b511;
}
input:checked + .slider:before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

/* show info header */
.show_can {
	width: 100%;
	min-height: 150px;
	position: relative;
}
.show_can img.poster{
	float: left;
	height: 150px;
	min-width: 100px;
	margin-right: 10px;
}
.show_info .headding{
	font-size: 22px;
	font-weight: bold;
	cursor: pointer;
	text-decoration: underline;
}
.show_info .headding.nolink, .show_info .headding.nolink:hover{
	color: var(--color-main-text);
	text-decoration: none;
	cursor: auto;
}
.show_info .headding:hover{
	color: #aaa;
	text-decoration: none;
}
.show_info .air_date{
	color: #aaa;
}
.source_selector {
	float: right;
	margin-right: 20px;
	margin-top: -10px;
}
.source_selector .hide{
	display: none;
}
.source_selector li{
	float: right;
	top: 0;
	margin-left: 5px;
	padding-bottom: 7px;
	right: 3px;
	position: relative;
}
.source_selector button{
	display: flex;
	align-items: center;
	height: 20px;
	width: 100%;
	padding: 0;
	margin: 0;
	background-color: rgba(0,0,0,0);
	box-shadow: none;
	border: 0;
	border-radius: calc(var(--default-clickable-area)/2);
	text-align: right;
	font-weight: normal;
	font-size: 100%;
	cursor: pointer;
	color: var(--color-main-text);
}
ul.menu li a:after {
	content: "";
	display: block;
	width: 50%;
	height: 2px;
	background-color: #3498db;
	position: absolute;
	bottom: 0;
	left: 25%;
	transform: translateX(-50%);
	opacity: 0;
	transition: all 0.3s;
}
.source_selector li:hover::before {
	opacity: 1;
}
.source_selector li.active:before{
    content: " ";
    position: absolute;
    pointer-events: none;
    border-bottom-color: #006aa3;
	background-color: #006aa3;
    transform: translateX(-50%);
    width: 12px;
    height: 5px;
    border-radius: 3px;
    left: 50%;
    bottom: 6px;
    display: block;
    transition: all .1s ease-in-out;
    opacity: 1;
}
[data-themes*=light] .source_selector #source_tvdb button::after{
    background-image: url('../img/tvdb_dark.png') !important;
}
.source_selector #source_tvdb button::after{
    content: "";
    background-image: url('../img/tvdb_dark.png');
    background-size: cover;
    background-repeat: no-repeat;
    display: inline-block;
    height: 20px;
	width: 37px;
    margin-left: 5px;
}
.source_selector #source_tmdb button::after{
    content: "";
    background-image: url('../img/tmdb.svg');
    background-size: cover;
    background-repeat: no-repeat;
    display: inline-block;
    height: 20px;
	width: 47px;
    margin-left: 5px;
}
.show_info .not_this, .restore{
	background: var(--color-main-background-blur);
	position: absolute;
	border-radius: 5px;
	padding-left: 10px;
	bottom: 5px;
	right: 0px;
}
#display-can .message {
	background-color: #e5eff8;
	border-radius: 20px;
	border: 1px solid #aaa;
	padding: 10px;
	margin-top: 100px;
	left: 50%;
	right: 50%;
	height: 150px;
	width: 300px;
	position: absolute;
}


/* file table */
.file_list {
	margin-top: 20px;
	width: 100%;
}
.file_list tr {
	height: 51px;
	border-bottom: 2px solid #000;
}
.file_list th {
	font-size: 18px;
	color: var(--color-main-text);
	padding: 0px;
}
.file_list th #update-all {
	padding-right: -10px !important;
}
.file_list td {
	font-size: 15px;
}
.file_list .selection {
	padding: 12px 14px;
	width: 30px;
}
.file_list .name {
	width: auto;
	white-space: normal;
}
.file_list .load{
	padding: 5px;
}
.file_list td.name .from {
	color: #d04a4a;
}
.file_list .name .to {
	color: #225518;
}
.file_list .buttons {
	width: 100px;
}
.file_list .buttons {
	text-align: right;
}


/* Loading Container */
#loading-can > div{
	margin-bottom: 10px;
}
#loading-can{
	background: var(--color-main-background-blur);
	position: absolute;
	border-radius: 5px;
	left: 50%;
	top: 50vh;
	transform: translate(-50%, -50%);
	text-align: center;
	padding: 20px 8px 5px 8px;
	z-index: 1000;
}
#loading-can.hidden{
	display: none;
}

/* hedding style */
#heading{
	padding-top: 15px;
	padding-left: 10px;
}
.current_folder a:hover{
	text-decoration: underline;
}
.icon-unknown{
	background-color: var(--color-main-text);
	-webkit-mask: url('../img/question-solid.svg') no-repeat 50% 50%;
	mask: url('../img/question-solid.svg') no-repeat 50% 50%;
	-webkit-mask-size: auto;
	mask-size: auto;
	width: 15px;
	height: 15px;
	display: inline-block;
  }
.reload{
	margin-left: 10px;
	background-color: var(--color-main-text);
	-webkit-mask: url('../img/reload.svg') no-repeat 50% 50%;
	mask: url('../img/reload.svg') no-repeat 50% 50%;
	-webkit-mask-size: auto;
	mask-size: auto;
	width: 10px;
	height: 10px;
	display: inline-block;
}
.reload:hover{
	background-color: #aaa;
}

/* content styles */
#app-content{
	width: 100%;
	clear: both;
}
#content, #app{
}
#display-can{
	padding: 10px;
}
#app-settings a, #app-settings a{
	font-size: 10px;
	text-decoration: underline;
	text-align: right;
}
#app-settings a:hover{
	color: #aaa;
}
#app-settings a.help, #app-settings a{
	float: right;
}
#app-settings .label-group{
	padding-top: 10px;
}
#app-datasource-button::before {
    background-image: var(--icon-projects-dark) !important;
}
#app-datasource-content{
    display: none;
    padding: calc(var(--default-grid-baseline)*2);
    padding-top: 0;
    padding-left: calc(var(--default-grid-baseline)*4);
    max-height: 300px;
    overflow-y: auto;
    box-sizing: border-box;
}
#app-datasource-content .powered{
	display: block;
}
#app-datasource-content .powered span{
	font-weight: bold;
}
#app-datasource-content .powered img{
	float: right;
}
#app-datasource-content .spacer{
	border-top: solid 1px #000;
	margin-top: 10px;
	margin-bottom: 10px;
}
[data-themes*=light] #app-datasource-content .tvdb .powered img{
	content:url(../img/tvdb_dark.png);
}

@media (prefers-color-scheme: dark){
	#app-datasource-content .tvdb .powered img{
		content:url(../img/tvdb.png);
	}
	.source_selector #source_tvdb button::after{
		background-image: url('../img/tvdb.png');
	}
	
}

